{
    "name": "LookControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "0a225f91-1b0a-459c-bd7c-0f269a53c4a3",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "PassThrough",
                    "id": "917d8046-fedd-48c3-b4b0-e1b9dfab88fa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "95534121-0630-405c-85fa-027ffe0ade68",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}